[project]
name = "lite-research-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lite_research_agents"]

[tool.uv]
dev-dependencies = []
